fix(description): ensure text aligned to left (button)

--- a/src/app/about/description/description.component.scss
+++ b/src/app/about/description/description.component.scss
@@ -28,6 +28,7 @@
     word-break: break-word;
     font-size: 1.5rem;
     gap: margins.$s;
+    text-align: left;
 
     // If we move it outside this selector, conflicts with root <a> styles
     ::ng-deep a {
@@ -50,7 +51,6 @@
     border: none;
     color: inherit;
     font-family: inherit;
-    font-weight: bold;
   }
 
   .caret {
@@ -66,5 +66,9 @@
 
   .data[aria-expanded="false"] + ul {
     overflow: hidden;
+  }
+
+  .data[aria-expanded] + ul .data {
+    font-size: 1.25rem;
   }
 }
